<?xml version="1.0"?>
<package format="3">
  <name>nvblox_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for nvblox-isaac library</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>libeigen3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
